# translation-plugin

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  ngnix.conf
backend/: .dockerignore  .gcloudignore  Dockerfile  README.md  deploy.sh  pyproject.toml  requirements.txt
backend/api/: main.py
backend/api/models/: kg.py  ocr.py  translate.py
backend/api/routers/: download_pdf.py  graph.py  keywords.py  ocr.py  related_terms.py  translate.py  upload_pdf.py  view_pdf.py
backend/scripts/: build_graph.py  clean_pdf.py  csv_filter.py  export_graph.py  jsonl_to_pickle.py
backend/templates/: pdf_view.html
backend/tools/: graph_query.py  load_graph.py  normalize_nlp.py  ocr.py  parser.py  pdf_reader.py  translate_llm.py
backend/utils/: chinese_s2t.py  detect_lang.py
frontend/: README.md  WARP.md  document.md  index.html  package-lock.json  package.json  pdf.html  tsconfig.app.json  vite.config.ts
frontend/extension/: background.js  config.js  content-script.js
frontend/extension/src/: App.tsx  config.ts  main.tsx  pdf-main.tsx  popup.tsx
frontend/extension/src/components/: HighlightedText.tsx  KnowledgeGraph.tsx  PdfUploader.tsx  RelatedTerms.tsx
frontend/extension/src/types/: react-cytoscapejs.d.ts
